--- a/src/Components/Question/styles.scss
+++ b/src/Components/Question/styles.scss
@@ -32,7 +32,32 @@
         margin-left: 8px;
         color: #7373;
         font-size: 14px;
+      }
+    }
 
+    button {
+      border: 0;
+      background: transparent;
+      cursor: pointer;
+      transition: filter 0.2s;
+
+      &.like-button {
+        display: flex;
+        align-items: flex-end;
+        color: #737388;
+        gap: 8px;
+
+        &.liked {
+          color: #835afd;
+          
+          svg path {
+            stroke: #835afd
+          }
+        }
+      }
+
+      &:hover {
+        filter: brightness(0.7)
       }
     }
   }
