--- a/src/Components/Question/styles.scss
+++ b/src/Components/Question/styles.scss
@@ -8,7 +8,24 @@
     margin-top: 8px;
   }
 
-  p {
+&.highlighted {
+  background: #f4f0ff;
+  border: 1px solid #835afd;
+
+  footer .user-info span {
+    color: #29292e;
+  }
+}
+
+&.answered {
+  background: #dbdcdd;
+
+  footer .user-info span {
+    color: #727280;
+  }
+}
+
+p {
     color: #29292e;
   }
 
@@ -33,6 +50,11 @@
         color: #7373;
         font-size: 14px;
       }
+    }
+
+    > div  {
+      display: flex;
+      gap: 16px
     }
 
     button {
